--- a/HotelManager/App.config
+++ b/HotelManager/App.config
@@ -2,5 +2,10 @@
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+      
     </startup>
+  <connectionStrings>
+    <add name="strConn" connectionString="Data Source=HP201-1;Initial Catalog=HotelManageEx;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DataBaseOwmer" connectionString="dbo"/>
+  </connectionStrings>
 </configuration>
