酒店管理系统

--- a/HotelManager/App.config
+++ b/HotelManager/App.config
@@ -5,7 +5,7 @@
       
     </startup>
   <connectionStrings>
-    <add name="strConn" connectionString="Data Source=HP201-1;Initial Catalog=HotelManageEx;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="strConn" connectionString="Data Source=.;Initial Catalog=HotelManageEx;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="DataBaseOwmer" connectionString="dbo"/>
   </connectionStrings>
 </configuration>
