--- a/HotelManagerDAL/HotelManagerDAL.csproj
+++ b/HotelManagerDAL/HotelManagerDAL.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminService.cs" />
+    <Compile Include="GuestRecordService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomService.cs" />
     <Compile Include="RoomTypeService.cs" />
   </ItemGroup>
   <ItemGroup>
