--- a/HotelManagerBLL/HotelManagerBLL.csproj
+++ b/HotelManagerBLL/HotelManagerBLL.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminManager.cs" />
+    <Compile Include="GuestRecordManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomManager.cs" />
     <Compile Include="RoomTypeManager.cs" />
   </ItemGroup>
   <ItemGroup>
