--- a/HotelManagerModel/HotelManagerModel.csproj
+++ b/HotelManagerModel/HotelManagerModel.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Admin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="GuestRecord.cs" />
+    <Compile Include="Room.cs" />
     <Compile Include="RoomType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
